All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-09-06 niel
	Fix: Prevent yEnc from configuring all adapters during install process, as that would require
		Db access which isn't available yet. Closes issue #2257.
2016-09-05 DariusIII
	Fix: Content display for not logged in users in Charisma/Gamma/Gentele/Omicron themes.
2016-09-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.4.0


2016-09-01 niel
	Fix: Update new yenc extension's adapter class.
2016-08-31 DariusIII
	Fix: Sorting arrows on admin->user-list page
2016-08-29 niel
	Mrg: dev-yenc-abstraction branch. This branch unifies our yenc code to use a single class.
		Lithium adapters are used for the available methods, the best available is
		automatically configured as the default.
		  No user configuration should be needed, except for the path to ydecode in the settings as
		before. simple_php_yen_decode can be removed from that setting for those using it, as the
		extension is automatically detected if available.
		  For PHP 7.0 users, a new extension is available to replace simple_php_yenc_decode (which
		cannot be compiled for PHP 7+). This extension is also available for PHP 5.6.
		  Those familiar with Zephir and able to compile the extension themselves, can do so from this
		repository: https://github.com/niel/php-yenc
		  If you can not compile, and are a trusting soul, precompiled versions, in a .deb file, can be
		downloaded from:
			https://github.com/niel/php-yenc/releases/download/v1.0.0/php5.6-yenc_1.0.0-5_amd64.deb
			https://github.com/niel/php-yenc/releases/download/v1.0.0/php7.0-yenc_1.0.0-4_amd64.deb
		  The deb package assumes that PHP 5/7 is installed with the php5.6-*/php7.0-* style of
		packaging it will not work correctly with the php5-*/php7-* style (extension should install,